# DipB-B

./: DESIGN_PROMPT.md  FINISHED_PLAN.md  HOW_TO_RUN_AND_TEST.md  Main Plan.md  PLAN.md  PROJECT.html  PROJECT.md  SETUP-DB.md  SETUP.html  SETUP.md  Thesis_Holovatyi_abstract.docx  WP7_NEXT_STEPS.md  docker-compose.yml  index.html  receipt_api_endpoints.py  receipt_ocr_schema.py  receipt_processing_workflow.py
backend/: .env.example  .gitignore  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 0001_baseline.py  0002_profile_interests.py  0003_raid_lifecycle.py  0004_parties.py  0005_drink_tags.py  0006_event_check_link.py  0007_user_gender.py
backend/app/: __init__.py  main.py
backend/app/achievements/: models.py  router.py  schemas.py  service.py
backend/app/api/: __init__.py  venues.py
backend/app/auth/: models.py  router.py  schemas.py  service.py
backend/app/bars/: models.py  router.py  schemas.py  service.py
backend/app/chat/: models.py  router.py  schemas.py  service.py
backend/app/checks/: models.py  router.py  schemas.py  service.py
backend/app/core/: config.py  db.py  deps.py  enums.py  redis.py  security.py
backend/app/friends/: models.py  router.py  schemas.py  service.py
backend/app/health/: router.py
backend/app/notifications/: models.py  router.py  schemas.py  service.py
backend/app/parties/: models.py  router.py  schemas.py  service.py
backend/app/quiz/: models.py  router.py  schemas.py  service.py
backend/app/raids/: models.py  router.py  schemas.py  service.py
backend/app/realtime/: manager.py  pubsub.py  router.py
backend/app/reference/: models.py  router.py  schemas.py
backend/app/services/: __init__.py  llm.py  ocr.py  push.py  receipt_ocr_service.py  registry.py  storage.py
backend/app/shared/: exceptions.py  pagination.py
backend/app/tavern_tales/: models.py  router.py  schemas.py  service.py
backend/app/users/: models.py  router.py  schemas.py
backend/scripts/: create_admin.py
backend/tests/: conftest.py  test_auth.py  test_bars.py  test_chat.py  test_checks_event.py  test_friends.py  test_health.py  test_parties.py  test_raids.py  test_reference.py
database/: SCHEMA.html  SCHEMA.md  load_seeds.sh  schema.sql
database/seeds/: 00_cities.sql  00_vibes.sql  01_lviv_bars.sql  02_drinks.sql  03_races.sql  04_quiz.sql  05_achievements.sql  06_dnd_classes.sql
database/tools/: generate_city_bars.py
designes_made_Gemini/: 01_home_feed.html  02_bar_detail.html  03_chat.html  04_split_room.html  05_profile.html  app-des.html  whioleDS.md
diagrams/: fig_2_1_actors.html  fig_2_2_uml_admin.html  fig_2_3_uml_visitor.html  fig_2_5_component_tree.html  fig_2_6_client_stack.html  fig_2_7_server_layers.html  fig_2_8_db_model.html  fig_3_1_er_diagram.html
mobile/: .gitignore  SETUP.md  app.json  babel.config.js  metro.config.js  package-lock.json  package.json
mobile/api/: achievementsApi.ts  authApi.ts  barsApi.ts  baseQuery.ts  chatApi.ts  checksApi.ts  friendsApi.ts  index.ts  notificationsApi.ts  partiesApi.ts  quizApi.ts  raidsApi.ts  referenceApi.ts  tavernApi.ts  types.ts  usersApi.ts
mobile/app/: _layout.tsx  friends.tsx  notifications.tsx
mobile/assets/: index.ts
mobile/data/: homeMocks.ts  profileMocks.ts
mobile/lib/: config.ts  drinkTypes.ts  push.ts  tokenStorage.ts  ws.ts
mobile/store/: authSlice.ts  index.ts
mobile/theme/: colors.ts  styleHelpers.ts  (+1 more)
scripts/: fetch_lviv_bars.py  verify-setup.sh
(+32 files in other folders)
