[project]
name = "beer-and-beverages-backend"
version = "0.1.0"
description = "FastAPI backend for the Beer & Beverages mobile app (diploma project)."
authors = [{ name = "Yaroslav Holovatyi", email = "yaroslavgolovatyy@gmail.com" }]
readme = "README.md"
requires-python = ">=3.12,<3.13"

dependencies = [
    # --- Web framework + ASGI server -------------------------------------------------
    "fastapi[standard]>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    # --- Settings & validation -------------------------------------------------------
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "email-validator>=2.2.0",
    # --- Database (async SQLAlchemy + asyncpg + Alembic) -----------------------------
    "sqlalchemy[asyncio]>=2.0.35",
    "asyncpg>=0.30.0",
    "alembic>=1.13.3",
    # GeoAlchemy2 for the PostGIS columns once we add ORM models on top of them
    "geoalchemy2>=0.15.2",
    # --- Redis (pub/sub + cache) -----------------------------------------------------
    "redis[hiredis]>=5.1.0",
    # --- Auth (JWT + Argon2 password hashing) ---------------------------------------
    "pyjwt[crypto]>=2.9.0",
    "passlib[argon2]>=1.7.4",
    "argon2-cffi>=23.1.0",
    # --- Misc utilities --------------------------------------------------------------
    "python-multipart>=0.0.12",     # form/multipart parsing for file uploads
    "httpx>=0.27.2",                 # outbound HTTP (OpenAI / S3 presign / health checks)
    "structlog>=24.4.0",             # structured logging
    "psycopg>=3.3.4",
]

[dependency-groups]
dev = [
    "pytest>=8.3.3",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.7.0",
    "mypy>=1.13.0",
    "types-passlib>=1.7.7.20240819",
]

[tool.uv]
package = false

# ---------------------------------------------------------------------------
# Ruff — lint + format
# ---------------------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E", "W",  # pycodestyle
    "F",       # pyflakes
    "I",       # isort
    "B",       # bugbear
    "UP",      # pyupgrade
    "ASYNC",   # async best practices
    "S",       # bandit
    "C4",      # comprehensions
    "SIM",     # simplify
    "RUF",
]
ignore = [
    "S101",    # allow `assert` in tests
    "B008",    # FastAPI Depends() in defaults is idiomatic
]

[tool.ruff.lint.per-file-ignores]
"alembic/versions/*.py" = ["E501"]
"tests/*" = ["S101", "S106"]

# ---------------------------------------------------------------------------
# Pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
asyncio_mode = "auto"
# Run every async test and async fixture on one shared, session-scoped event
# loop. The DB engine is created once at import time and its connection pool
# binds to a loop; without this, pytest-asyncio 1.x spins up a fresh loop per
# test and the pooled connections end up "attached to a different loop".
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
testpaths = ["tests"]

# ---------------------------------------------------------------------------
# Mypy
# ---------------------------------------------------------------------------
[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]
exclude = ["alembic/versions/"]
